--- a/templates/includes/scripts.twig
+++ b/templates/includes/scripts.twig
@@ -1,5 +1,12 @@
-{# Подключаемые скрипты #}       
+{# Подключаемые скрипты #}
       <script src="/js/jquery.autocomplete.js"></script>
       <script src="/js/plugins.js"></script>
       <script src="/js/main.js?{#{{filemtimeMainJs}}#}"></script>
       {#<script>document.write('<script src="/js/portalServiceMode.js?v=' + Math.floor(Math.random() * 100) + '"\><\/script>');</script>#}
+
+
+<script>
+	$(document).ready(function() {
+		console.log('Hello');
+	});
+</script>
