--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -3,9 +3,8 @@
 
 <div class="header">
     <a class='logo' href='#'>
-        <img src="{{ asset('images/logo.png') }}" />
+        <img src="{{ asset('images/_logo.png') }}" />
     </a>
-    
     <div class="header-content">
             <div class="date-time">
                 <div class="time">16:49</div>
@@ -30,7 +29,7 @@
                 <div class="weather2">
                   <div>
                         <div class='weather-ico'>
-                            <img src="{{ asset('images/svg/cloud.svg') }}" /> 
+                            <img src="{{ asset('images/svg/cloud.svg') }}" />
                         </div>
                         <div class='weather-info'>−15°C<br>небольшая<br>облачность</div>
                     </div>
@@ -60,6 +59,6 @@
             <div class="user">
               <div class="user-name">Иванов Иван Иванович</div>
               <div class="avatar"></div>
-            </div>                    
+            </div>
    </div>
 </div>
