--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
     <link href="/css/vankor/fonts/fonts2.css" rel="stylesheet" type="text/css">
     <link href="/css/vankor/jquery.autocomplete.css" rel="stylesheet" type="text/css" />
     <link href="/css/vankor/bootstrap/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="/Extension/fontawesome-free-5.0.6/css/vankor/fontawesome-all.min.css">
+    <link rel="stylesheet" href="/Extension/fontawesome-free-5.0.6/css/fontawesome-all.min.css">
     <script src="/js/jquery.min.js"></script>
     {% block stylesheets %}{% endblock %}
 </head>
